data/derived/sp14/progs/unify/prog4012.ml.out
Characters 9-10:
  getLast [1;2;3];;
           ^
Error: This expression has type int but an expression was expected of type
         'a list
